added media queries for homepage header

--- a/index.html
+++ b/index.html
@@ -20,12 +20,41 @@
     <!-- HEADER -->
     <header class="homeHeader">
       <div class="wrapper">
-        <nav>
+        <!-- Nav -->
+        <nav class="nav">
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </nav>
+
+        <input type="checkbox" id="toggleNav" />
+        <label for="toggleNav" class="menuButton">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+
+        <nav class="mobileNav">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+          <ul class="social">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            </li>
           </ul>
         </nav>
 
