added media queries for contact page

--- a/blog.html
+++ b/blog.html
@@ -16,12 +16,15 @@
     <title>Blog</title>
   </head>
   <body>
+    <!-- Skip Link -->
+    <a href="#blogMain" class="skip-link">Skip to man content.</a>
+    <!-- Header -->
     <header class="blogHeader">
       <div class="wrapper">
         <!-- NAV -->
         <nav class="nav">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
@@ -33,7 +36,7 @@
         </label>
         <nav class="mobileNav">
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
