--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,44 @@
     <title>Contact Us</title>
   </head>
   <body>
+    <!-- Skip Link -->
+    <a href="#contactMain" class="skip-link">Skip to man content.</a>
+    <!-- Header -->
     <header class="contactHeader">
       <div class="wrapper">
-        <nav>
+        <!-- Nav -->
+        <nav class="nav">
           <ul>
             <li><a href="./index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="./blog.html">Blog</a></li>
             <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <input type="checkbox" id="toggleNav" />
+        <label for="toggleNav" class="menuButton">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+        <nav class="mobileNav">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="./blog.html">Blog</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+          <ul class="social">
+            <li>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            </li>
           </ul>
         </nav>
 
