--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Captured</title>
   </head>
   <body>
+    <!-- Skip Link -->
+    <a href="#mainContent" class="skip-link">Skip to man content.</a>
     <!-- HEADER -->
     <header class="homeHeader">
       <div class="wrapper">
