updated nav styling, fixed some responsive behaviour

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </nav>
         <input type="checkbox" id="toggleNav" />
         <label for="toggleNav" class="menuButton">
+          <i class="fa-solid fa-x"></i>
           <i class="fa-solid fa-bars"></i>
         </label>
         <nav class="mobileNav">
