--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
         </nav>
         <input type="checkbox" id="toggleNav" />
         <label for="toggleNav" class="menuButton">
+          <i class="fa-solid fa-x"></i>
           <i class="fa-solid fa-bars"></i>
         </label>
         <nav class="mobileNav">
